FIND_PACKAGE(Boost REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
INCLUDE_DIRECTORIES(Externals/urilite)

LIST(APPEND FreedomHTTP_SOURCES Server.cpp)
LIST(APPEND FreedomHTTP_SOURCES HTTPCodes.cpp)

LIST(APPEND FreedomHTTP_HEADERS Server.hpp)
LIST(APPEND FreedomHTTP_HEADERS HTTPCodes.hpp)

ADD_LIBRARY(FreedomHTTP STATIC ${FreedomHTTP_HEADERS} ${FreedomHTTP_SOURCES})
TARGET_LINK_LIBRARIES(FreedomHTTP ${Boost_LIBRARIES})
